--- a/myjob.html
+++ b/myjob.html
@@ -3,7 +3,7 @@
 <html>
 
 	<head>
-		<title>Operations Editor</title>
+		<title>Operations Editor at NBC Local</title>
 
 		<style>
 			
@@ -26,7 +26,7 @@
 	</head>
 
 <body>
-	<h1>Operations Editor</h1>
+	<h1>Operations Editor at NBC Local</h1>
 	<p>Cathy Rainone</p>
 
 	<img src="https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-98849.jpg" width="100%" />
